fix: use query in getFile handler
